Fix typing effect on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,11 +68,6 @@ html::before {
   box-sizing: border-box;
 }
 
-h1 {
-  margin: 1rem 0;
-  font-size: 2.5rem;
-}
-
 .nav-link {
   display: flex;
   align-items: center;
